#    git diff <cluster commit id> Changelog
# It is also a good idea to take a look on:
#    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
#    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.

* shakurov: Commit 71325f8588 has changed the 'unlock' command semantics. Update masters via snapshot.
* shakurov: TClusterResources serialization has changed slightly. Update masters via snapshot.
* avmatrosov: Added annotations. Update masters via snapshot.
* aozeritsky: RequestRateLimitOptions was added. Update masters via snapshot.
* babenko: Transaction mirroring. Update via snapshot.
* ermolovd: Update type validation. Update via snapshot.
* ermolovd: Introduced new time-related logical types. Update via snapshot.
* savrus: Fix dynamic table statistics update in multicell environment. Update masters via snapshot.
* ignat: Update operations archive to version 31 (core_info added).
* ifsmirnov: Changed semantics in merging dynamic table nodes. Update masters via snapshot.
* avmatrosov: Added copy for replicated tables. Update masters via snapshot.
* ifsmirnov: Estimated creation time map. Update masters via snapshot.
* akozhikhov: Added new users for tablet system activity. Update masters via snapshot.
* babenko: Some recent fix in portal destruction requires masters to be updated via snapshot.
* savrus: Moved tablet manager config to dynamic configs. Update masters via snapshot.
* ermolovd: Enabled null type in schema. Update masters via snapshot.
* savrus: Allowed to change tablet cell bundle options on fly in 42a67269eb. Update masters via snapshot.
* savrus: Introduced reigns in 63bd34940. Do not need to follow fbe2670bc16 instruction to remove tablet cells.
* babenko: More portal exit attributes. Update masters via snapshot.