@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* ifsmirnov: Mount revision is set during tablet unlock. Update masters via snapshot.
 * shakurov: Commit 71325f8588 has changed the 'unlock' command semantics. Update masters via snapshot.
 * shakurov: TClusterResources serialization has changed slightly. Update masters via snapshot.
 * avmatrosov: Added annotations. Update masters via snapshot.
